syntax = "proto2";

import "nanopb.proto";

package xen;

message ConfigWrapper {
    optional ChannelConfig channelConfig = 1;
    optional Scale scale = 2;
    optional int32 triggerTime = 3;
}

message ChannelConfig {
    repeated ChannelMapping channelMapping = 1 [(nanopb).max_count = 16];
}

message ChannelMapping {
    required int32 midiChannel = 1;
    required int32 cvChannelFrom = 2;
    required int32 cvChannelTo = 3;
}

message Scale {
    repeated int32 cents = 1 [(nanopb).max_count = 48];
}
